# spectral-network-gui

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  network.toml  search.toml
crates/spectral-matcher/: Cargo.toml
crates/spectral-matcher/src/: api.rs  export.rs  lib.rs  main.rs  mgf.rs  model.rs  network.rs  search.rs  server.rs  similarity.rs  taxonomy.rs
crates/spectral-matcher/tests/: api.rs  cli.rs
src/: app.rs  attributes.rs  compute.rs  export.rs  io.rs  layout.rs  lib.rs  main.rs  matcher_client.rs  metadata.rs  network.rs  render.rs  search_exports.rs
