[package]
name = "spectral-network-gui"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "spectral-network-gui"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", default-features = true }
egui = "0.31"
mass_spectrometry = { git = "https://github.com/earth-metabolome-initiative/mass-spectrometry-traits" }
rfd = "0.15"
poll-promise = { version = "0.3", features = ["web"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"
spectral-cosine-similarity = { path = "../spectral-cosine-similarity" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Blob",
  "BlobPropertyBag",
  "Document",
  "HtmlCanvasElement",
  "HtmlAnchorElement",
  "Url",
  "Window",
] }
